--- a/1173/sections/amendments/06-nnp.adoc
+++ b/1173/sections/amendments/06-nnp.adoc
@@ -1,14 +1,20 @@
-== National Numbering Plan  (According to Recommendation ITU-T E.129 (01/2013))
+=== National Numbering Plan  (According to Recommendation ITU-T E.129 (01/2013))
 
 Web: www.itu.int/itu-t/inr/nnp/index.html
 
 Administrations are requested to notify ITU about their national numbering plan changes, or to give an explanation on their webpage concerning the national numbering plan as well as their contact points, so that the information, which will be made available freely to all administrations/ROAs and service providers, can be posted on the ITU-T website.
+
 For their numbering website, or when sending their information to ITU/TSB (e-mail: tsbtson@itu.int), administrations are kindly requested to use the format as explained in Recommendation ITU-T E.129. They are reminded that they will be responsible for the timely update of this information.
+
 From 1.V.2019, the following countries/geographical areas have updated their national numbering plan on our site:
 
-Country/ Geographical area	Country Code (CC)
-Armenia	+374
-Burkina Faso	+226
-Myanmar	+95
+[cols="a,a"]
+|===
+|Country/ Geographical area
+|Country Code (CC)
 
+|Armenia | +374
+|Burkina Faso |+226
+|Myanmar |+95
 
+|===
