--- a/1173/document.adoc
+++ b/1173/document.adoc
@@ -7,17 +7,23 @@
 
 Address:
 
-Place des Nations CH-1211
-Genève 20 (Switzerland)
-Tel: 	+41 22 730 5111
+Place des Nations CH-1211 +
+Genève 20 (Switzerland) +
+Tel: 	+41 22 730 5111 +
 E-mail:	itumail@itu.int
 
-Standardization Bureau (TSB)
-Tel:	+41 22 730 5211
-Fax:	+41 22 730 5853
+Standardization Bureau (TSB) +
+Tel:	+41 22 730 5211 +
+Fax:	+41 22 730 5853 +
 E-mail:	tsbmail@itu.int / tsbtson@itu.int
 
-Radiocommunication Bureau (BR)
-Tel:	+41 22 730 5560
-Fax:	+41 22 730 5785
+Radiocommunication Bureau (BR) +
+Tel:	+41 22 730 5560 +
+Fax:	+41 22 730 5785 +
 E-mail:	brmail@itu.int
+
+include::sections/00-publication-schedule.adoc[]
+
+include::sections/01-general.adoc[]
+
+include::sections/02-amendments.adoc[]
