--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,11 @@ Provides a formalized representation of OB and associated ITU publications.
 
 = Vocabulary
 
-* List: a dataset maintained by ITU in connection with a certain Recommendation.
+List::
+a dataset maintained by ITU in connection with a certain Recommendation.
 
-* List position: a snapshot of that dataset deemed as valid at given point in time.
+List position::
+a snapshot of that dataset deemed as valid at given point in time.
 +
 From time to time (could be every few years), a new snapshot of a List is created.
 +
@@ -14,27 +16,37 @@ is then published with dataset snapshot (List position) annexed to it.
 Subsequent OB issues may disseminate amendments to that dataset,
 until a new snapshot is published.
 
-* Active, relevant datasets or their latest snapshots disseminated by ITU
-  at given point in time are internally called “running annexes”.
+Lists annexed::
+see “Running annexes”.
+
+Running annexes::
+effective datasets (Lists) or their latest snapshots (List positions)
+disseminated by ITU at given point in time.
 +
-A list of such datasets is mentioned in the beginning of each OB issue
-under “Lists annexed” section.
+A list of running annexes at the time of each OB issue’s publication
+is provided in the beginning of that issue under “Lists annexed” section.
+A list of current annexes as of latest issue is provided
+on ITU site under ITU-T publications section.
 
-* ITU OB: ITU Operational Bulletin.
+ITU OB::
+ITU Operational Bulletin.
 
-* Message: a piece of information disseminated via ITU OB.
-  Maps to a section within an OB issue.
+Message::
+a piece of information disseminated via ITU OB.
+Maps to a section within an OB issue.
 +
 Usually a message is connected to an ITU recommendation.
 +
 A message may be an amendment, or otherwise be a notice of general kind.
 
-* Amendment: an update to a previous ITU publication
-  (such as an annex to a previous OB issue or some external publication).
+Amendment::
+an update to a service publication
+(a List position annexed to a previous OB issue, or an external publication).
 +
-Always specifies the target being amended and the _changeset_.
+Always specifies the target being amended.
   
-* Amendment target: references the original publication being amended.
+Amendment target::
+references the original publication being amended.
 +
 Must specify _publication_ (specifying original publication).
 +
@@ -43,8 +55,9 @@ and depend on publication type:
 _position_on_ for Lists annexed to previous OB issues;
 _issue_ and _location_ for List V.
     
-* External publication: ITU publication not annexed to a previous OB issue,
-  such as List V.
+External publication::
+ITU publication not annexed to a previous OB issue,
+such as List V, List VIII or NNP / Telephone Service dataset.
 
 = Message types
 
