Q708_ISPC amendments: Make format consistent

--- a/issues/1170/amendments/q708-ispc.adoc
+++ b/issues/1170/amendments/q708-ispc.adoc
@@ -1,17 +1,17 @@
 |===
 2+h| Country/ Geographical Area .2+h| Unique name of the signalling point .2+h| Name of the signalling point operator
 h| ISPC h| DEC
+
 4+| *Belgium LIR*
 | 2-098-6 | 4886 | Nethys 1 | Nethys SA
 | 2-098-7 | 4887 | Nethys 2 | Nethys SA
+
 4+| *Sweden SUP*
 | 6-229-2 | 14122 | STPVanso1 (Linköping) | VANSO GmbH
+
 4+| *Sweden LIR*
 | 6-238-3 | 14195 | RWC-ISPC-1 (Stockholm) | Netmore Group AB
 
 |===
 
-ISPC::
-International Signalling Point Codes. +
-Codes de points sémaphores internationaux (CPSI). +
-Códigos de puntos de señalización internacional (CPSI).
+ISPC:: International Signalling Point Codes. / Codes de points sémaphores internationaux (CPSI). / Códigos de puntos de señalización internacional (CPSI).
