--- a/issues/1172/amendments/q708-ispc.adoc
+++ b/issues/1172/amendments/q708-ispc.adoc
@@ -1,4 +1,3 @@
-[width=709]
 |===
 2+h| Country/ Geographical Area .2+h| Unique name of the signalling point .2+h| Name of the signalling point operator
 h| ISPC h| DEC
@@ -9,7 +8,4 @@ h| ISPC h| DEC
 
 |===
 
-ISPC::
-International Signalling Point Codes. +
-Codes de points sémaphores internationaux (CPSI). +
-Códigos de puntos de señalización internacional (CPSI).
+ISPC:: International Signalling Point Codes. / Codes de points sémaphores internationaux (CPSI). / Códigos de puntos de señalización internacional (CPSI).
