--- a/issues/1173/general/iptn.adoc
+++ b/issues/1173/general/iptn.adoc
@@ -3,9 +3,9 @@ Note from TSB: Identification codes for international network
 Associated with shared country code 883 for international networks, the following four-digit identification codes have been assigned:
 
 |===
-| Applicant |Network| Country Code and Identification Code| Date of assignment
+h| Applicant h| Network h| Country Code and Identification Code h| Date of assignment
 
-| DIDWW| DIDWW| +883 | 5170	| 8.V.2019
+| DIDWW| DIDWW| +883 5170	| 8.V.2019
 
 |===
 
