--- a/issues/1171/amendments/e212_mnc.adoc
+++ b/issues/1171/amendments/e212_mnc.adoc
@@ -1,140 +1,17 @@
-.<a| [[_Toc6411913]]*Mobile Network Codes (MNC) for the international identification plan +
- for public networks and subscriptions +
- (According to Recommendation ITU-T E.212 (09/2016)) +
- (Position on 15 December 2018)*
+==== Mobile Network Codes (MNC) for the international identification plan +
+ for public networks and subscriptions 
+ (According to Recommendation ITU-T E.212 (09/2016)) 
+ (Position on 15 December 2018)
 
-|===
- +
- +
+(Annex to ITU Operational Bulletin No. 1162 - 15.XII.2018)(Amendment No. 8)
 
-a| +
- +
-a| +
- +
 
-a| +
- +
+|=======
+| *_Country/Geographical area_* | *_MCC+MNC_* * | *_Operator/Network_*
+| *Georgia ADD*  | 282 12 | "Datacomm" LTD
+|=======
 
-a| +
- +
-a| +
- +
 
-a| 
+* MCC: Mobile Country Code / Indicatif de pays du mobile / Indicativo de país para el servicio móvil
 
-|===
-.<h| (Annex to ITU Operational Bulletin No. 1162 - 15.XII.2018)(Amendment No. 8)
-
-|===
- +
- +
-
-a| +
- +
-a| +
- +
-
-a| +
- +
-
-a| +
- +
-a| +
- +
-
-a| 
-
-|===
-a| +
-
-a| +
-
-a| +
-
-a| +
-
-2+a| +
-a| +
-
-a| +
-
-a| 
-
-|===
-| _*Country/Geographical area*_ | _*MCC+MNC \**_ | _*Operator/Network*_
-
-.2+.<| *Georgia ADD* a| +
-
-a| +
-
-| 282 12 .<| "Datacomm" LTD
-
-|===
- +
- +
-
-a| +
- +
-
-2+a| +
- +
-a| +
- +
-
-a| +
- +
-
-a| +
- +
-
-a| +
- +
-
-2+a| +
- +
-a| +
- +
-
-4+a| 
-
-|===
-.<h| \_\_\_\_\_\_\_\_\_\_\_\_\* MCC: Mobile Country Code / Indicatif de pays du mobile / Indicativo de país para el servicio móvilMNC: Mobile Network Code / Code de réseau mobile / Indicativo de red para el servicio móvil
-
-|===
- +
- +
-
-a| +
- +
-a| +
- +
-
-a| +
- +
-
-a| +
- +
-
-a| +
- +
-
-2+a| +
- +
-
-|===
- +
- +
-
-a| +
- +
-
-|===
-
-+
- +
-
-+
-
-+
-
-+
+* MNC: Mobile Network Code / Code de réseau mobile / Indicativo de red para el servicio móvil
