--- a/issues/1171/amendments/q708_ispc.adoc
+++ b/issues/1171/amendments/q708_ispc.adoc
@@ -5,7 +5,7 @@
 (Annex to ITU Operational Bulletin No. 1109 – 1.X.2016) +
  (Amendment No. 55)
 
-+
+
 
 |===
 3+h| _Country/ Geographical Area_ 2.2+h| _Unique name of the signalling point_ .2+h| _Name of the signalling point operator_
@@ -27,13 +27,11 @@
 
 |===
 
-^\_\_\_\_\_\_\_\_\_\_\_\_^
+'''
+ISPC: 
 
-ISPC: International Signalling Point Codes.
+&#160; &#160; International Signalling Point Codes.
 
-Codes de points sémaphores internationaux (CPSI).
+&#160; &#160; Codes de points sémaphores internationaux (CPSI).
 
-Códigos de puntos de señalización internacional (CPSI).
-
-+
-
+&#160; &#160; Códigos de puntos de señalización internacional (CPSI).
