--- a/issues/1174/amendments/e129-nnp.adoc
+++ b/issues/1174/amendments/e129-nnp.adoc
@@ -1,21 +1,13 @@
-*National Numbering Plan +
- (According to Recommendation ITU-T E.129 (01/2013))*
-
-Web: www.itu.int/itu-t/inr/nnp/index.html
-
 Administrations are requested to notify ITU about their national numbering plan changes, or to give an explanation on their webpage concerning the national numbering plan as well as their contact points, so that the information, which will be made available freely to all administrations/ROAs and service providers, can be posted on the ITU-T website.
 
 For their numbering website, or when sending their information to ITU/TSB (e-mail: mailto:tsbtson@itu/.int[tsbtson@itu.int]), administrations are kindly requested to use the format as explained in Recommendation ITU-T E.129. They are reminded that they will be responsible for the timely update of this information.
 
 From 15.V.2019, the following countries/geographical areas have updated their national numbering plan on our site:
 
-+
-
 |===
-h| _Country/_ _Geographical area_ h| _Country Code (CC)_
+h| Country/Geographical area h| Country Code (CC)
 | Gambia | +220
 | Iran (Islamic Republic of) | +98
 | Morocco | +212
-
 |===
 
