--- a/issues/1174/general/org_changes.adoc
+++ b/issues/1174/general/org_changes.adoc
@@ -1,9 +1,6 @@
-*Changes in Administrations/ROAs and other entities 
- or Organizations*
+==== Mexico
 
-*Mexico*
-
-Communication of 23.V.2019:
+===== Communication of 23.V.2019
 
 _Granting of Recognized Operating Agency (ROA) status_
 
@@ -12,46 +9,26 @@ The _Instituto Federal de Telecomunicaciones (IFETEL)_, Ciudad de México, annou
 The name of the telecommunication operators and service providers to which the status of Recognized Operating Agency (ROA) has been granted, is: _Mega Cable, S.A. de C.V._
 
 
+===== Contact
 
-Contact:
-
-Mr Ramón Olivares Chávez
-
-Mega Cable, S.A. de C.V.
-
-Av. Lázaro Cárdenas No. 1694,
-
-Col. Del Fresno,
-
-C.P. 44909, Guadalajara,
-
-Jalisco,
-
-México.
-
-Tel.: 52 (33) 3750 0020 Op.1 Ext: 61332
-
+Mr Ramón Olivares Chávez +
+Mega Cable, S.A. de C.V. +
+Av. Lázaro Cárdenas No. 1694, +
+Col. Del Fresno, +
+C.P. 44909, Guadalajara, +
+Jalisco, +
+México. +
+Tel.: 52 (33) 3750 0020 Op.1 Ext: 61332 +
 E-mail: rolivares@megacable.com.mx; juridicoregulatorio@megacable.com.mx
-
-
 
 For further information, please contact:
 
-Instituto Federal de Telecomunicaciones (IFETEL)
-
-Avenida Insurgentes Sur 1143
-
-Col. Noche Buena
-
-03720 CIUDAD DE MÉXICO
-
-Mexico
-
-Tel: +52 (55) 5015 4208
-
-E-mail: asuntosinternacionales@ift.org.mx
-
+Instituto Federal de Telecomunicaciones (IFETEL) +
+Avenida Insurgentes Sur 1143 +
+Col. Noche Buena +
+03720 CIUDAD DE MÉXICO +
+Mexico +
+Tel: +52 (55) 5015 4208 +
+E-mail: asuntosinternacionales@ift.org.mx +
 URL: http://ucsweb.ift.org.mx/vrpc/
-
-
 
