fix: Table syntax in 1172 amendment

--- a/issues/1172/amendments/m1400-icc.adoc
+++ b/issues/1172/amendments/m1400-icc.adoc
@@ -1,17 +1,16 @@
-[width=715]
+[cols="4*a"]
 |===
-| Country or area/ISO code | Company Code | Contact
-| Company Name/Address | (carrier code) |
+h|Country or area/ISO code
+h|Company Name/Address  (carrier code)
+h|Company Code
+h|Contact
 
-|===
-*Germany (Federal Republic of) / DEU*_*LIR*
-
-[width=747]
-|===
+| Germany (Federal Republic of) / DEU LIR
 | C&S Breitband GmbH +
 Turmstrasse 49 +
-D-23843 BAD OLDESLOE | *CUSB* | Mr Heiner Kahmann +
+D-23843 BAD OLDESLOE
+| CUSB
+| Mr Heiner Kahmann +
 Tel.: +49 4531 8929 510 +
 E-mail : hkahmann@cs-breitband.de
-
 |===
